--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,11 +63,11 @@
                             </a>
 
                             <ul class="dropdown-menu " aria-labelledby="navbarDarkDropdownMenuLink">
-                                
+
                                 <li><a class="dropdown-item" href="{{ url_for("auth.edit_profile") }}">Manage
-                                    Profile</a></li>
+                                    Profile</li>
                                 <li><a class="dropdown-item" href="{{ url_for("auth.edit_account") }}">Manage
-                                    Account</a></li>
+                                    Account</li>
                                 <li><a class="dropdown-item" href="{{ url_for("map.browse_locations") }}">Loc Mgmt</a>
                                 </li>
                                 <li><a class="dropdown-item" href="{{ url_for("songs.songs_browse") }}">Song Mgmt</a>
