--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -4,7 +4,7 @@
     <div class="col-6">
     <h1>About This Project</h1>
 
-        <p class="fs-5">This is Project 3 in Web Development Systems graduate class (IS-601) at NJIT with professor Keith Williams.<br>
+        <p class="fs-5">This website was created by Diana Zawislak for learning purposes while pursuing IBM Full Stack Software Developer Professional Certificate at Coursera<br>
         </p>
     </div>
 
