--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,13 +1,13 @@
 
-body {
+/*--body {
 font-size: 100%;
-    background-image: url(../images/background.jpg);
+    background-image: url(../images/ibm.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 100%;
     margin: 3px;
     background-attachment: fixed;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.9);
     background-blend-mode: lighten;
 }
 
@@ -161,3 +161,4 @@ a {
     background-color: transparent;
 
 }
+
