--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,24 +7,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         {% block styles %}
-
             <!-- Bootstrap CSS -->
             {{ bootstrap.load_css() }}
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-                  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-                  crossorigin="anonymous">
-            <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
         {% endblock %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-        <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
-
-
-        <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo1.png') }}">
-        <title>My Music{% block title %}{% endblock %}</title>
-
+        <title>My Site - {% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
-
+<body>
 <div class="container">
 
     <div class="row">
@@ -33,65 +24,38 @@
             {% from 'bootstrap5/utils.html' import render_messages %}
             {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
 
-            <nav class="navbar navbar-default navbar-expand-lg px-3 rounded-3">
-                <a class="navbar-brand ml-5">
-                    <img src="{{ url_for('static', filename='images/logo1.png') }}" height="60" width="60" alt="">
-                </a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <div class="navbar-nav mr-auto">
                         {% if current_user.is_authenticated %}
                             {{ render_nav_item('auth.dashboard','Dashboard' ) }}
+                            {% if current_user.is_admin %}
+                                {{ render_nav_item('auth.browse_users','User Management' ) }}
+                            {% endif %}
+
                         {% else %}
                             {{ render_nav_item('simple_pages.index', 'Home') }}
                         {% endif %}
-                        {{ render_nav_item('map.map_locations','Map' ) }}
-                        {{ render_nav_item('simple_pages.about','About') }}
-                      <li class="nav-item dropdown">
-                        <a class="nav-link  dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            IBM Exercises</a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('simple_pages.IBM') }}">Form</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('simple_pages.Interest') }}">Interest Rate</a></li>
 
-                        </ul>
+                        {{ render_nav_item('simple_pages.about','About') }}
+                        {{ render_nav_item('simple_pages.welcome','Welcome') }}
                     </div>
                 </div>
                 <div class="navbar-nav d-flex">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
                                 My Account
                             </a>
-
                             <ul class="dropdown-menu " aria-labelledby="navbarDarkDropdownMenuLink">
-
-                                <li><a class="dropdown-item" href="{{ url_for("auth.edit_profile") }}">Manage
-                                    Profile</li>
-                                <li><a class="dropdown-item" href="{{ url_for("auth.edit_account") }}">Manage
-                                    Account</li>
-                                <li><a class="dropdown-item" href="{{ url_for("map.browse_locations") }}">Loc Mgmt</a>
-                                </li>
-                                <li><a class="dropdown-item" href="{{ url_for("songs.songs_browse") }}">Song Mgmt</a>
-                                </li>
-                                <li><a class="dropdown-item" href="{{ url_for("map.browse_locations_datatables") }}">Loc
-                                    Mgmt(dt)</a></li>
-
-
-                                {% if current_user.is_admin %}
-                                    <li><a class="dropdown-item" href="{{ url_for("auth.browse_users") }}">User Mgmt</a>
-                                    </li>
-
-
-                                {% endif %}
-
+                                <li><a class="dropdown-item" href="{{ url_for("auth.edit_profile") }}">Manage Profile</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for("auth.edit_account") }}">Manage Account</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for("auth.logout") }}">Logout</a></li>
                             </ul>
                         </li>
@@ -114,15 +78,12 @@
     </div>
 </div>
 
-
-
-
 {% block scripts %}
     <!-- Optional JavaScript -->
-
+    {{ bootstrap.load_js() }}
 {% endblock %}
 <footer class="text-center mt-5">
-    <p>Copyright &copy {{ year }} &middot; Diana Zawislak </p>
+    Environment: {{ deployment_environment }} - Copyright: {{ year }} {{ format_price(100) }}
 </footer>
 </body>
 </html>
