--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,18 +32,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <div class="navbar-nav mr-auto">
-                        {% if current_user.is_authenticated %}
-                            {{ render_nav_item('auth.dashboard','Dashboard' ) }}
-                            {% if current_user.is_admin %}
-                                {{ render_nav_item('auth.browse_users','User Management' ) }}
-                            {% endif %}
+                            {{ render_nav_item('IBM_pages','/' ) }}
+                            {{ render_nav_item('IBM_pages','Form') }}
+                            {{ render_nav_item('IBM_pages', 'InterestRate') }}
 
-                        {% else %}
-                            {{ render_nav_item('simple_pages.index', 'Home') }}
-                        {% endif %}
-
-                        {{ render_nav_item('simple_pages.about','About') }}
-                        {{ render_nav_item('simple_pages.welcome','Welcome') }}
                     </div>
                 </div>
                 <div class="navbar-nav d-flex">
