--- a/app/IBM_page/templates/interestRate.html
+++ b/app/IBM_page/templates/interestRate.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends base %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Simple Interest Rate Calculator</title>
@@ -7,4 +7,4 @@
 <body>
 
 </body>
-</html>
+{% endblock %}
