--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,30 +32,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <div class="navbar-nav mr-auto">
-                            {{ render_nav_item('IBM_pages','/' ) }}
-                            {{ render_nav_item('IBM_pages','Form') }}
-                            {{ render_nav_item('IBM_pages', 'InterestRate') }}
+                            {{ render_nav_item('IBM_pages.py','Home' ) }}
+                            {{ render_nav_item('IBM_pages.py','Form') }}
+                            {{ render_nav_item('IBM_pages.py','interestRate') }}
 
                     </div>
                 </div>
-                <div class="navbar-nav d-flex">
-                    {% if current_user.is_authenticated %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                My Account
-                            </a>
-                            <ul class="dropdown-menu " aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="{{ url_for("auth.edit_profile") }}">Manage Profile</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for("auth.edit_account") }}">Manage Account</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for("auth.logout") }}">Logout</a></li>
-                            </ul>
-                        </li>
-                    {% else %}
-                        {{ render_nav_item('auth.register','Register' ) }}
-                        {{ render_nav_item('auth.login','Login' ) }}
-                    {% endif %}
-                </div>
+
             </nav>
         </header>
     </div>
