--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,29 @@
 body {
-font-size: 200%;
+
+}
+/*------------------------------ Navbar Custom -------------------------------*/
+.navbar-default {
+    background-image: linear-gradient(#585858, #909090); !important;
+
+}
+.navbar-default .navbar-nav > li > a {
+    color: black !important;
+    font-size: large;
+}
+
+.nav-item {
+    color: black !important;
+    font-size: large;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    color: blue !important;
+}
+
+/*------------------- Color of links------------------------------------------*/
+a:hover {
+    color: blue !important;
+}
+a {
+    color: darkslategrey;
 }
