--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,15 @@
 
         {% block styles %}
             <!-- Bootstrap CSS -->
+              <!-- Bootstrap CSS -->
+            {{ bootstrap.load_css() }}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+                  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+                  crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
+            <link rel="stylesheet" href="https://unpkg.com/bootstrap-social@5.1.1/bootstrap-social.css">
+            <link  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
             {{ bootstrap.load_css() }}
         {% endblock %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -24,7 +33,7 @@
             {% from 'bootstrap5/utils.html' import render_messages %}
             {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-default navbar-nav navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -32,10 +41,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <div class="navbar-nav mr-auto">
-                            {{ render_nav_item('IBM_pages.py','Home' ) }}
-                            {{ render_nav_item('IBM_pages.py','Form') }}
-                            {{ render_nav_item('IBM_pages.py','interestRate') }}
-
+                            {{ render_nav_item('ibm.home','HOME' ) }}
+                            {{ render_nav_item('ibm.form','FORM') }}
+                            {{ render_nav_item('ibm.interestRate','INTEREST RATE') }}
+{{ render_nav_item('ibm.geolocation','GEOLOCATION') }}
                     </div>
                 </div>
 
@@ -58,7 +67,7 @@
     {{ bootstrap.load_js() }}
 {% endblock %}
 <footer class="text-center mt-5">
-    Environment: {{ deployment_environment }} - Copyright: {{ year }} {{ format_price(100) }}
+    Environment: {{ deployment_environment }} - Copyright: {{ year }}
 </footer>
 </body>
 </html>
