--- a/app/ibm/templates/interestRate.html
+++ b/app/ibm/templates/interestRate.html
@@ -23,13 +23,18 @@
                                 <input type="number" id="principal">
                             </td>
                         </tr>
+                        <br>
+
                         <tr>
+
                             <td class="labels">Interest Rate </td>
                             <td>
                                 <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" name="rate" onchange="SliderValue()">
                                 <span id="rate_display">10.25%</span>
                             </td>
                         </tr>
+                        <br>
+
                         <tr>
                             <td class="labels">No. of Years</td>
                             <td>
@@ -49,13 +54,18 @@
                         </tr>
                     </tbody>
                 </table>
+                <br>
 
 
                 <button id="compute" onclick="compute()">Compute Interest</button> <br>
                 <span id="result">
                 </span>
             </div>
-            <footer>&copy; Diana Zawislak</footer>
+            <br>
+            <br>
+            <footer>
+                &copy;Everyone can get rich <br>
+                2022 This calculator belongs to :Diana Zawislak</footer>
 
 
         </div>
