--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
         {% endblock %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-        <title>My Site - {% block title %}{% endblock %}</title>
+        <title>Web App – Simple Interest Calculator{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
 <body>
@@ -67,7 +67,7 @@
     {{ bootstrap.load_js() }}
 {% endblock %}
 <footer class="text-center mt-5">
-    Environment: {{ deployment_environment }} - Copyright: {{ year }}
+     &copy; Copyright 2022 - Diana Zawislak
 </footer>
 </body>
 </html>
