--- a/app/ibm/templates/geolocation.html
+++ b/app/ibm/templates/geolocation.html
@@ -20,7 +20,7 @@
         Using our current location, we can find out how far we are from the Statue of Liberty. See for yourself by clicking on the button below.
         </div>
       <br><br>
-    <button onclick="getlocation1()">Compute distance to Statue of Liberty</button>
+    <button onclick="getlocation()">Compute distance to Statue of Liberty</button>
     <br>
     <span id="output"></span>
     <br>
@@ -53,7 +53,7 @@
     var output = document.getElementById("output");
     var kms = 0;
     var duration = 0;
-    function getlocation1() {
+    function getlocation() {
         if(navigator.geolocation){
             navigator.geolocation.getCurrentPosition(howFar)
           }
@@ -72,6 +72,9 @@
 
        var lat2  =  40.690400;
        var long2 = -74.045792;
+
+
+
        kms = distance(lat1, long1, lat2, long2, 'K');
        kms = parseFloat(kms).toFixed(2)
        //alert(kms);
@@ -117,24 +120,25 @@
         Using our current location, we can find out how far we are from the Tokyo. See for yourself by clicking on the button below.
         </div>
       <br><br>
-    <button onclick="getlocation()">Compute distance to Tokyo</button>
+    <button onclick="getlocation1()">Compute distance to Tokyo</button>
     <br>
     <span id="output1"></span>
     <br>
     <br>
     </div>
 
-    <div id="p2" style="display:none;padding:10px">
-    Click on the button below to find out how long it would take you to walk to Tokyo.
+
+     <div id="q1" style="display:none;padding:10px">
+    Click on the button below to find out how long it would take you to walk to the Statue of Liberty.
       <div>
       <img src="http://www.clipartbest.com/cliparts/7Ta/RgE/7TaRgErbc.gif" width="100px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <img src="https://www.bing.com/images/search?view=detailV2&ccid=Z2Uzvibi&id=DD4FD4E550E8016855D160B18D14ABFF1B431B4B&thid=OIP.Z2UzvibiVLSJYOMXJPnMUAHaHa&mediaurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.676533be26e254b48960e31724f9cc50%3frik%3dSxtDG%252f%252brFI2xYA%26riu%3dhttp%253a%252f%252fwww.ambiance-sticker.com%252fimages%252fImage%252fcity54-Tokyo-skyline1_1410424620.png%26ehk%3dGq%252fY%252b4inEa9NozJiHOwnIcAZRxpJXx7nyeq4IdUOGME%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=1200&expw=1200&q=tokyo+png&simid=608041179010827177&FORM=IRPRST&ck=BA23B75B5933CD3E3AC99B5A1215A407&selectedIndex=6&ajaxhist=0&ajaxserp=0" width="150px">
+      <img src="http://www.ambiance-sticker.com/images/Image/city54-Tokyo-skyline1_1410424620.png" width="150px" height="200px">
       </div>
 
-    <button onclick="getElementById('p1').style.display='inline';">Compute time to walk</button>
+    <button onclick="getElementById('p2').style.display='inline';">Compute time to walk</button>
 
       <div id="p2" style="display:none;padding:10px"><br><br>Walking at a speed of 5 Kilometers per Hour, it would take you<br>
-      	<span style="background-color:yellow;font-:bold" id="days"></span> days<br> to reach Statue of Liberty.<br> By the way, that is if there is a straight road to Statue of Liberty from your location.
+      	<span style="background-color:yellow;font-:bold" id="days1"></span> days<br> to reach Statue of Liberty.<br> By the way, that is if there is a straight road to Statue of Liberty from your location.
       </div><br><br>
     </div>.
     </div>
@@ -146,10 +150,10 @@
  <script>
     var output1 = document.getElementById("output1");
     var kms = 0;
-    var duration = 0;
-    function getlocation() {
+    var duration1 = 0;
+    function getlocation1() {
         if(navigator.geolocation){
-            navigator.geolocation.getCurrentPosition(howFar)
+            navigator.geolocation.getCurrentPosition(howFar1)
           }
         else
         {
@@ -157,34 +161,35 @@
          }
           }
 
-     function howFar(position){
-       var lat1  = position.coords.latitude;
-       var long1 = position.coords.longitude;
+     function howFar1(position){
+       var lat4  = position.coords.latitude;
+       var long4 = position.coords.longitude;
 
        //Coordinates of Tokyo
 
 
-       var lat2  =  35.652832;
-       var long2 = 139.839478;
-       kms = distance(lat1, long1, lat2, long2, 'K');
+       var lat3  =  35.652832;
+       var long3 = 139.839478;
+       kms = distance1(lat4, long4, lat3, long3, 'K');
        kms = parseFloat(kms).toFixed(2)
        //alert(kms);
-       duration = parseFloat(kms / 5 / 24).toFixed(2) // days
+       duration1 = parseFloat(kms / 5 / 24).toFixed(2) // days
        document.getElementById('output1').innerHTML = "<br> You are <h3>" + kms +  " Kilometers </h3> away from Tokyo.<br>";
-       document.getElementById('days').innerHTML = "<strong>" + duration + "<strong>";
-       document.getElementById('q2').style.display = "inline";
+       document.getElementById('days1').innerHTML = "<strong>" + duration1 + "<strong>";
+       document.getElementById('q1').style.display = "inline";
+
      }
 
-     function distance(lat1, lon1, lat2, lon2, unit) {
-	if ((lat1 == lat2) && (lon1 == lon2)) {
+     function distance1(lat4, lon4, lat3, lon3, unit) {
+	if ((lat4 == lat3) && (lon4 == lon3)) {
 		return 0;
 	}
 	else {
-		var radlat1 = Math.PI * lat1/180;
-		var radlat2 = Math.PI * lat2/180;
-		var theta = lon1-lon2;
+		var radlat4 = Math.PI * lat4/180;
+		var radlat3 = Math.PI * lat3/180;
+		var theta = lon4-lon3;
 		var radtheta = Math.PI * theta/180;
-		var dist = Math.sin(radlat1) * Math.sin(radlat2) + Math.cos(radlat1) * Math.cos(radlat2) * Math.cos(radtheta);
+		var dist = Math.sin(radlat4) * Math.sin(radlat3) + Math.cos(radlat4) * Math.cos(radlat3) * Math.cos(radtheta);
 		if (dist > 1) {
 			dist = 1;
 		}
@@ -196,5 +201,5 @@
 		return dist;
 	}
 }</script>
-
+</div>
 {% endblock %}
