--- a/app/ibm/templates/geolocation.html
+++ b/app/ibm/templates/geolocation.html
@@ -129,7 +129,7 @@
 
 
      <div id="q1" style="display:none;padding:10px">
-    Click on the button below to find out how long it would take you to walk to the Statue of Liberty.
+    Click on the button below to find out how long it would take you to walk to the Tokyo.
       <div>
       <img src="http://www.clipartbest.com/cliparts/7Ta/RgE/7TaRgErbc.gif" width="100px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <img src="http://www.ambiance-sticker.com/images/Image/city54-Tokyo-skyline1_1410424620.png" width="150px" height="200px">
