--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -102,7 +102,16 @@ a {
 }*/
 
 .btn-primary {
-    background-color: #303030!important;
+    background-image: linear-gradient(#303030, #585858)!important;
     color: #909090!important;
-border-color: #303030!important;
+    border-radius: 8px!important;
+    border-color: #303030!important;
+}
+
+.btn-primary:hover {
+    background-color: aquamarine!important;
+}
+
+.location {
+    color: darkgrey!important;
 }
