--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -65,7 +65,7 @@ table td
 
 .highlight
 {
-    background-color: #ffff00;
+    background-color: yellowgreen;
 }
 /*------------------------------ Navbar Custom -------------------------------*/
 .navbar-default {
@@ -101,6 +101,7 @@ a {
     border-width: 1px;
 }*/
 
+
 .btn-primary {
     background-image: linear-gradient(#303030, #585858)!important;
     color: #909090!important;
@@ -109,9 +110,25 @@ a {
 }
 
 .btn-primary:hover {
-    background-color: aquamarine!important;
+    background-color: blue!important;
+}
+
+
+.button {
+    background-image: linear-gradient(#303030, #585858)!important;
+    color: #909090!important;
+    border-radius: 8px!important;
+    border-color: #303030!important;
+}
+
+.button:hover {
+    background-color: blue!important;
 }
 
 .location {
     color: darkgrey!important;
+}
+
+.fill {
+    color: white;
 }
