--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,8 @@
                             {{ render_nav_item('ibm.home','HOME' ) }}
                             {{ render_nav_item('ibm.form','FORM') }}
                             {{ render_nav_item('ibm.interestRate','INTEREST RATE') }}
-{{ render_nav_item('ibm.geolocation','GEOLOCATION') }}
+                            {{ render_nav_item('ibm.cities','CITIES') }}
+                            {{ render_nav_item('ibm.geolocation','GEOLOCATION') }}
                     </div>
                 </div>
 
